# querable

./: .travis.yml  Cargo.toml  README.md
.cargo/: config
.config/: benchmark.sh
.github/workflows/: audit.yml  benchmark.yml  clippy.yml  general.yml  grcov.yml  nightly_lints.yml  quick.yml
benches/: lookup_benches.rs
core/: Cargo.toml
core/src/: default.rs  error.rs  kind.rs  lib.rs  types.rs
serde/: Cargo.toml
serde/src/: lib.rs
src/: default.rs  error.rs  kind.rs  lib.rs  types.rs
tmpl/: Cargo.toml
tmpl/src/: lib.rs  types.rs
