[package]
name = "querable"
version = "0.0.1"
authors = ["zerosign <r1nlx0@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/querable/0.0.1/querable"
repository = "https://github.com/zerosign/querable"
homepage = "https://github.com/zerosign/querable"
description = "Quer(y)able data structure implementation."
categories = ["data-structures"]
keywords = ["querable", "traits", "typeclass"]

[dev-dependencies]
log = "0.4.8"
env_logger = "0.7.1"
